--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,20 +36,28 @@ p {
 .clear {
   clear: both;
 }
+
 .mb-5 {
   margin-bottom: 5px;
+
 }
 .mb-10 {
   margin-bottom: 10px;
 }
 .mb-20 {
-  margin-bottom: 20px;
+  margin-top: -25px;
 }
 .mb-30 {
   margin-bottom: 30px;
 }
+.mb-t{
+  padding-top: 32px;
+  padding-right: 10px;
+}
 .mb-35 {
-  margin-bottom: 35px;
+  margin-bottom: 4px;
+  margin-right: 47px;
+  padding-top: 1px;
 }
 .mb-50 {
   margin-bottom: 50px;
@@ -166,7 +174,7 @@ hr {
   -webkit-box-shadow: 0 10px 15px rgba(25, 25, 25, 0.1);
 }
 #back-top {
-  background: #c30047;
+  background: #009b01;
   height: 50px;
   width: 50px;
   right: 31px;
@@ -294,7 +302,7 @@ hr {
   }
 }
 .footer-padding {
-  padding-top: 80px;
+  padding-top: 100px;
   padding-bottom: 0;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -406,7 +414,7 @@ hr {
   background-repeat: no-repeat !important;
 }
 .btn {
-  background: #c30047;
+  background: #009b01;
   font-family: "Roboto", sans-serif;
   text-transform: inherit !important;
   padding: 22px 32px;
@@ -433,7 +441,7 @@ hr {
   top: 0;
   width: 102%;
   height: 102%;
-  background: #e6115f;
+  background: #009b01;
   z-index: 1;
   border-radius: 0px;
   transition: transform 0.5s;
@@ -474,7 +482,7 @@ hr {
   font-weight: 600;
 }
 .header-btn:hover {
-  color: #c30047;
+  color: #009b01;
 }
 .header-btn:hover i {
   transform: rotate(15deg);
@@ -500,7 +508,7 @@ hr {
 }
 .submit-btn {
   width: 100%;
-  background: #c30047;
+  background: #009b01;
   font-family: "Lora", serif;
   text-transform: inherit !important;
   padding: 25px 43px;
@@ -555,8 +563,8 @@ hr {
   transition: all 0.3s ease-out 0s;
 }
 .btn_1 {
-  background-color: #c30047;
-  border: 1px solid #c30047;
+  background-color: #009b01;
+  border: 1px solid #009b01;
   color: #fff !important;
   display: inline-block;
   padding: 16px 41px;
@@ -567,8 +575,8 @@ hr {
 }
 .btn_1:hover {
   background-color: #fff;
-  border: 1px solid #c30047;
-  color: #c30047 !important;
+  border: 1px solid #009b01;
+  color: #009b01 !important;
 }
 .btn.focus,
 .btn:focus {
@@ -582,24 +590,24 @@ hr {
 }
 .boxed-btn {
   background: #fff;
-  color: #c30047 !important;
+  color: #009b01 !important;
   display: inline-block;
   padding: 18px 44px;
   font-family: "Lora", serif;
   font-size: 14px;
   font-weight: 400;
   border: 0;
-  border: 1px solid #c30047;
+  border: 1px solid #009b01;
   letter-spacing: 1px;
   text-align: center;
-  color: #c30047;
+  color: #009b01;
   text-transform: uppercase;
   cursor: pointer;
 }
 .boxed-btn:hover {
-  background: #c30047;
+  background: #009b01;
   color: #fff !important;
-  border: 1px solid #c30047;
+  border: 1px solid #009b01;
 }
 .boxed-btn:focus {
   outline: none;
@@ -611,7 +619,7 @@ hr {
   padding: 28px 36px;
 }
 .header-area .header-top {
-  background: #c30047;
+  background: #009b01;
   padding: 8px 210px;
 }
 @media only screen and (min-width: 1200px) and (max-width: 1600px) {
@@ -748,7 +756,7 @@ hr {
   }
 }
 .main-header .main-menu ul > li:hover > a {
-  color: #c30047;
+  color: #009b01;
 }
 .main-header .main-menu ul ul.submenu {
   position: absolute;
@@ -784,7 +792,7 @@ hr {
   position: unset;
 }
 .main-header .main-menu ul ul.submenu > li > a:hover {
-  color: #c30047;
+  color: #009b01;
   background: none;
 }
 .main-header .logo {
@@ -829,7 +837,7 @@ hr {
   display: inline-block !important;
   font-size: 15px !important;
   font-weight: 500 !important;
-  background: #c30047;
+  background: #009b01;
   border-radius: 30px;
 }
 .header-btn:hover {
@@ -837,17 +845,17 @@ hr {
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .header-btn:hover {
-    background: #c30047 !important;
+    background: #009b01 !important;
   }
 }
 @media only screen and (min-width: 576px) and (max-width: 767px) {
   .header-btn:hover {
-    background: #c30047 !important;
+    background: #009b01 !important;
   }
 }
 @media (max-width: 575px) {
   .header-btn:hover {
-    background: #c30047 !important;
+    background: #009b01 !important;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -1621,9 +1629,12 @@ hr {
     margin-bottom: 30px;
   }
 }
+.flogo{
+  width: 80px;
+}
 .footer-wrapper {
   position: relative;
-  background: #301a22;
+  background: #003a00;
 }
 .footer-wrapper .footer-area .footer-pera p {
   color: #fff;
